Updates so that .version is only updated when necessary.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 CoFlo NEWS
 
-Version 0.1.104M - Gary R. Van Sickle, 2011-08-16
+Version 0.1.0.106.116M - Gary R. Van Sickle, 2011-08-21
 
-* Alpha released.
+* First alpha released.
+
