--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 CoFlo NEWS
 
-Version 0.0.1@VC_VERSION@ - Gary R. Van Sickle, 2011-08-27
+Version 0.0.1 - Gary R. Van Sickle, 2011-12-10
 
 * First alpha released.
 
