--- a/README
+++ b/README
@@ -34,5 +34,5 @@ Documentation
 
 For documentation on how to install and use CoFlo, see the CoFlo manual included
 with this distribution.  The CoFlo manual is available in HTML format in the
-doc/index.html file, and online at ?????.
+doc/index.html file, and online at <http://coflo.sourceforge.net/manuals/0.0.1/index.html>.
 
