--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 CoFlo NEWS
 
+Version 0.0.2 - Gary R. Van Sickle, 2011-12-13
+
+* Minor bugfix release:
+- Now require Boost >= 1.46.1 due to the need for Boost.Filesystem generic_string().
+- Add missing loop_test_1.png to the distro.
+
 Version 0.0.1 - Gary R. Van Sickle, 2011-12-10
 
 * First alpha released.
