branch_13: Now adding impossible edges to unconnected blocks during CFG creation.  Bumped version and added 2012 to copyright notice in configure.ac.  Added connectedness test.  Added a number of -I ...debug_utils to Makefile.am's.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 CoFlo NEWS
 
+Version 0.0.4 - Gary R. Van Sickle, 2012-??-??
+
+
 Version 0.0.3 - Gary R. Van Sickle, 2012-01-07
 
 * Major installation improvements:
