Issue: #4 ---------- Bugtraq Message ---------- issue #4: C/C++ Task: Fix up topologic_visit_kahn.h to work with new FunctionCall linking mechanism. -------------------------------------
Split FunctionCFGVisitor off into its own class. A lot of cleanups.

--- a/doc/MainPage.dox
+++ b/doc/MainPage.dox
@@ -5,7 +5,7 @@
 @section copyright_sec Copyright
 @verbatim
 
-Copyright 2011 Gary R. Van Sickle (grvs@users.sourceforge.net).
+Copyright 2011, 2012 Gary R. Van Sickle (grvs@users.sourceforge.net).
  
 This file is part of CoFlo.
  
